# mrpc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cc
conf/: mrpc.xml
src/common/: config.cc  config.h  error_code.h  log.cc  log.h  log_stream.cc  log_stream.h  msg_id_util.cc  msg_id_util.h  mutex.h  singleton.h  util.cc  util.h
src/net/: callback.h  eventloop.cc  eventloop.h  fd_event.cc  fd_event.h  fd_event_group.cc  fd_event_group.h  io_thread.cc  io_thread.h  io_thread_pool.cc  io_thread_pool.h  timer.cc  timer.h  timer_event.cc  timer_event.h  wakeup_fd_event.cc  wakeup_fd_event.h
src/net/coder/: abstract_coder.h  abstract_protocol.h  string_coder.h  tinypb_coder.cc  tinypb_coder.h  tinypb_protocol.cc  tinypb_protocol.h
src/net/rpc/: rpc_channel.cc  rpc_channel.h  rpc_closure.h  rpc_controller.cc  rpc_controller.h  rpc_dispatcher.cc  rpc_dispatcher.h
src/net/tcp/: abstract_coder.h  abstract_protocol.h  net_addr.cc  net_addr.h  string_coder.h  tcp_acceptor.cc  tcp_acceptor.h  tcp_buffer.cc  tcp_buffer.h  tcp_client.cc  tcp_client.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  tcp_server.h
test/: order.proto  test_buffer.cc  test_client.cc  test_eventloop.cc  test_eventloop.py  test_log.cc  test_rpc_client.cc  test_rpc_server.cc  test_tcp.cc  test_timer.cc
test/python/: 1.py  2.py  3.py  4.py  5.py  6.py
test/yolo/: test  test.cc  yolov5_lite.cc  yolov5_lite.h
